--- a/Ubiquitous2/View/SettingsWindow.xaml
+++ b/Ubiquitous2/View/SettingsWindow.xaml
@@ -28,7 +28,7 @@
         <Converter:StringToIsChecked x:Key="stringToIsCheckedConverter"/>
     </Window.Resources>
     <Grid>
-        <fluent:BackstageTabControl SelectedIndex="2" Background="#FF323232" Style="{DynamicResource SettingsStyle}">
+        <fluent:BackstageTabControl SelectedIndex="0" Background="#FF323232" Style="{DynamicResource SettingsStyle}">
             <fluent:BackstageTabItem Header="Chats">
                 <Grid>
                     <ItemsControl ItemsSource="{Binding Chats}"
@@ -93,8 +93,8 @@
                     <VirtualizingStackPanel Orientation="Vertical">
                         <RadioButton Command="{Binding SelectTheme}" CommandParameter="Main" Style="{DynamicResource ThemeRadioButton}" GroupName="ThemeButtons" IsChecked="{Binding CurrentTheme, Converter={StaticResource stringToIsCheckedConverter}, ConverterParameter=Main}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center">
                             <Grid>
-                                    <TextBlock VerticalAlignment="Center" Margin="0,0,8,0" HorizontalAlignment="Left">Main</TextBlock>
-                                    <Image Width="150" Source="/Ubiquitous2;component/Resources/MainThemeThumbnail.png" DockPanel.Dock="Right" HorizontalAlignment="Right"/>
+                                <TextBlock VerticalAlignment="Center" Margin="0,0,8,0" HorizontalAlignment="Left">Main</TextBlock>
+                                <Image Width="150" Source="/Ubiquitous2;component/Resources/MainThemeThumbnail.png" DockPanel.Dock="Right" HorizontalAlignment="Right"/>
                             </Grid>
 
                         </RadioButton>
@@ -106,6 +106,29 @@
                         </RadioButton>
                     </VirtualizingStackPanel>
                 </ScrollViewer>
+            </fluent:BackstageTabItem>
+            <fluent:BackstageTabItem Header="Personalization">
+                <Grid Margin="10">
+                    <StackPanel Orientation="Vertical">
+                        <CheckBox IsChecked="{Binding AppConfig.EnableTransparency, Mode=TwoWay}" Content="Enable transparency" Command="{Binding ReopenMainWindow}"/>
+                        <TextBlock TextWrapping="Wrap" FontSize="9">
+                            *Options to try if you get problems with OBS capture:
+                            <LineBreak/>
+                            - use "Save to png" service to capture window as image
+                            <LineBreak/>
+                            - try to enable "Capture layered windows" in OBS
+                            <LineBreak/>
+                            - disable Aero if you got Vista/Seven
+                            <LineBreak/>
+                            - put window on top of windowed game and capture whole monitor (CPU heavy)
+                        </TextBlock>
+                        <Label>Background opacity</Label>
+                        <Slider Value="{Binding AppConfig.BackgroundOpacity, Mode=TwoWay}" Margin="5,0,20,0" Maximum="1" SmallChange="0.05" TickFrequency="0.05" TickPlacement="BottomRight" LargeChange="0.1" Minimum="0.01"></Slider>
+                        <Label>Message background opacity</Label>
+                        <Slider Value="{Binding AppConfig.MessageBackgroundOpacity, Mode=TwoWay}" Margin="5,0,20,0" Maximum="1" SmallChange="0.05" TickFrequency="0.05" TickPlacement="BottomRight" LargeChange="0.1" Minimum="0.01"></Slider>
+                    </StackPanel>
+                    
+                </Grid>
             </fluent:BackstageTabItem>
         </fluent:BackstageTabControl>
     </Grid>
