--- a/Ubiquitous2/web/css/simple.css
+++ b/Ubiquitous2/web/css/simple.css
@@ -27,14 +27,20 @@
 	height:18px;	
 }
 
+#chat > div div {
+	position:relative;
+	font-size: 8pt;	
+	float:left;
+}
+
 /*Message div*/
-.msg {
-	background-color:#1E1E1E;
+#chat > div{
+
     padding: 10px;
     margin-bottom: 5px;
 }
 /*Chat Icon*/
-.ci{
+#chat > div > img:nth-child(1){
 	float:left;
 	margin-top: -5px;
 	margin-left: -5px;
@@ -43,40 +49,28 @@
    	-webkit-filter: drop-shadow(1px 1px 1px #222);
     filter: url(drop-shadow.svg#drop-shadow);
 }
-/*Timestamp*/
-.ts{
+/*Channel name*/
+#chat > div div:nth-child(2){
 	color:#D69B33;
-	display:block;
+	margin-top:-6px;
+	margin-right:5px;
+	margin-left:5px;
+}
+/*Username*/
+#chat > div div:nth-child(3){
+	color:#FFC042;
+	margin-top: -6px;
+}
+/*Timestamp*/
+#chat > div div:nth-child(4){
+	color:#D69B33;
 	float:right;
 	margin-top:-6px;
 	margin-right:5px;
 	margin-left:5px;
-    position:relative;
-	font-size:8pt;
-}
-
-/*Username*/
-.un{
-	display:block;
-	color:#FFC042;
-	font-size:8pt;
-	margin-top: -6px;
-	float:left;
-}
-/*Channel name*/
-.cn{
-	color:#D69B33;
-	display:block;
-	margin-top:-6px;
-	margin-right:5px;
-	margin-left:5px;
-	float:left;
-    position:relative;
-	font-size:8pt;
 }
 /*Text*/
-.txt{
-	
+#chat > div div:nth-child(5){	
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     border-radius: 15px;
@@ -87,8 +81,8 @@
 	padding:5px;
 	clear:left;
 	font-size:10pt;
-	display:block;
 	color:#9C9C9C;
+	float:none;
 }
 a {
 	color: #D69B33;	
