disable  click-through checkbox if transparency disabled

--- a/Ubiquitous2/View/SettingsWindow.xaml
+++ b/Ubiquitous2/View/SettingsWindow.xaml
@@ -124,7 +124,7 @@
                                 - put window on top of windowed game and capture whole monitor (CPU heavy)
                                 <LineBreak/>
                             </TextBlock>
-                            <CheckBox IsChecked="{Binding AppConfig.MouseTransparency, Mode=TwoWay}" Content="Click-through window. Hold Ctrl to disable."/>
+                            <CheckBox IsEnabled="{Binding AppConfig.EnableTransparency,Mode=OneWay}" IsChecked="{Binding AppConfig.MouseTransparency, Mode=TwoWay}" Content="Click-through window. Hold Ctrl to disable."/>
                             <Label Margin="0,8,0,0">Background opacity(doesn't affect PNG background)</Label>
                             <Slider Value="{Binding AppConfig.BackgroundOpacity, Mode=TwoWay}" Margin="5,0,20,0" Maximum="1" SmallChange="0.05" TickFrequency="0.05" TickPlacement="BottomRight" LargeChange="0.1" Minimum="0.01"></Slider>
                             <Label Margin="0,8,0,0">Message background opacity</Label>
