--- a/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatMessageSkin.xaml
@@ -2,6 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:ub="clr-namespace:UB.View"
                     xmlns:Converter="clr-namespace:UB.Converter"
+                    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                    xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
                     xmlns:Interactivity="clr-namespace:UB.Interactivity"
                     xmlns:gif="http://wpfanimatedgif.codeplex.com"
                     >
@@ -62,7 +64,17 @@
                                         <TextBlock Focusable="False" FontSize="11" Text="{Binding Message.Channel}" Margin="3,1,0,0" HorizontalAlignment="Left" FontWeight="Bold"/>
                                     </Hyperlink>
                                 </TextBlock>
-                                <TextBox Focusable="False"  FontSize="11" Text="{Binding Message.FromUserName}" Margin="0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold"/>
+                                <TextBox  Cursor="Hand" Focusable="False" FontSize="11" Text="{Binding Message.FromUserName}" Margin="0" Foreground="#FFFFC042" HorizontalAlignment="Left" FontWeight="Bold" OverridesDefaultStyle="False">
+                                    <TextBox.ContextMenu>
+                                        <ContextMenu Name="userNameMenu" Style="{DynamicResource ContextMenuStyle}">
+                                            <MenuItem Header="Add to ignore list" Command="{Binding IgnoreUser}" Foreground="#FFFFC042">
+                                                <MenuItem.Icon>
+                                                    <Image Width="16" Source="/Ubiquitous2;component/Resources/ignore.png"/>
+                                                </MenuItem.Icon>
+                                            </MenuItem>
+                                        </ContextMenu>
+                                    </TextBox.ContextMenu>
+                                </TextBox>
                                 <TextBox Focusable="False" Text="{Binding Message.TimeStamp}" FontSize="10" Foreground="#FFD69B33" TextAlignment="Right" DockPanel.Dock="Right" Margin="0,1,0,0" FontWeight="Bold"/>
                             </DockPanel>
                             <Border Focusable="False" Grid.ColumnSpan="2" Grid.Row="1" CornerRadius="10" Background="#FF303030" BorderThickness="0" Padding="2,1" Margin="0,0,0,-9">
